<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/earth"
    tools:context=".GetDate">

    <TextView
        android:id="@+id/textTitle1"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/caudex"
        android:text="@string/horoscope"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textSubtitle1"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/caudex"
        android:text="@string/enter"
        android:textAlignment="center"
        android:textColor="@color/title"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonGet"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/text"
        android:fontFamily="@font/caudex"
        android:text="@string/get"
        android:textColor="@color/title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textYear" />

    <TextView
        android:id="@+id/textMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/month"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:fontFamily="@font/caudex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDay" />

    <TextView
        android:id="@+id/textDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/day"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:fontFamily="@font/caudex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubtitle1" />

    <EditText
        android:id="@+id/Days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="DD"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textColor="@color/title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textDay"
        app:layout_constraintTop_toBottomOf="@+id/textSubtitle1" />

    <EditText
        android:id="@+id/Years"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="YYYY"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="18sp"
        android:maxLength="4"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textYear"
        app:layout_constraintTop_toBottomOf="@+id/Monthes" />

    <TextView
        android:id="@+id/textYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/year"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:fontFamily="@font/caudex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMonth" />

    <Spinner
        android:id="@+id/Monthes"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:dropDownWidth="wrap_content"
        android:entries="@array/monthes"
        android:spinnerMode="dialog"
        android:textColor="@color/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textMonth"
        app:layout_constraintTop_toBottomOf="@+id/Days" />

    <TextView
        android:id="@+id/Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        app:layout_constraintBottom_toTopOf="@+id/buttonGet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Years" />

</androidx.constraintlayout.widget.ConstraintLayout>